--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,8 @@ pip=19.3.1=py36_0
 pycparser=2.19=py36_0
 pyparsing=2.4.6=py_0
 pyqt=5.9.2=py36h6538335_4
+pyqt5=5.14.0=pypi_0
+pyqt5-sip=12.7.0=pypi_0
 python=3.6.9=h5500b2f_0
 python-dateutil=2.8.1=py_0
 pytorch=1.3.1=py3.6_cuda101_cudnn7_0
